fio-storage.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: fio-storage
  labels:
     app: fio-storage
spec:
  volumes:
    - name: storage-fio
      persistentVolumeClaim:
        claimName: fio-data-pvc
  containers:
    - name: fio-storage
      image: registry.redhat.io/rhel7
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        capabilities:
          drop:
          - ALL
      volumeMounts:
        - name: storage-fio
          mountPath: /mnt
      command: ["/bin/sh", "-c"]
      args:
        - "sleep 36000"
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: node-role.kubernetes.io/worker
            operator: In
            values:
            - ""
---
