fio-visualizer.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: fio-visualizer
  labels:
     app: fio-visualizer
spec:
  volumes:
    - name: storage-fio
      persistentVolumeClaim:
        claimName: fio-data-pvc
  containers:
    - name: fio-visualizer
      image: quay.io/abose/simple-fio-visualizer:latest
      command: ["python3"]
      args: ["fio_visualizer.py"]
      ports:
      - containerPort: 5000
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        capabilities:
          drop:
          - ALL
      volumeMounts:
        - name: storage-fio
          mountPath: /mnt
      command: ["/bin/sh", "-c"]
      args:
        - "sleep 36000"
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: node-role.kubernetes.io/worker
            operator: In
            values:
            - ""
  restartPolicy: Always
---
