fio.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fio-client
  namespace: simple-fio
spec:
  containers:
    - image: quay.io/abose/fio:latest
      name: fio-container
      securityContext:
        capabilities:
          add: ["SYS_ADMIN"]
      command: ["/bin/sh", "-c"]
      args: 
        - "for itr in $(seq 1 ${sample1});
           do
            echo *********Fio_Job**************;
            /usr/bin/fio --output=/tmp/output.log ${final_serverIPs}; 
            sleep 10; 
            grep -A3 \"All clients\" /tmp/output.log;
            sleep 50; 
          done;
          "
  restartPolicy: Never
