prefill.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fio-prefill
  namespace: simple-fio
  labels:
    app: fio-prefill
spec:
  containers:
    - image: quay.io/abose/fio:latest
      securityContext:
        allowPrivilegeEscalation: false
        seccompProfile:
          type: RuntimeDefault
        capabilities:
          drop:
          - ALL
      resources:
        requests:
          memory: "1Gi"
          cpu: "1"
        limits:
          memory: "1Gi"
          cpu: "1"
      name: fio-client
      volumeMounts:
        - name: data-vol
          mountPath: "/mnt/"
        - name: cm-server-ip-vol
          mountPath: /media
        - name: cm-prefill-info-vol
          mountPath: /home
        - name: cm-prefill-job-vol
          mountPath: /tmp
      command: ["/bin/sh", "-c"]
      args: 
        - "echo \"Initializing and Configuring FIO jobs\"; sleep 10;
          source /home/job_info.txt;
          if [ ${prefill} == \"true\" ]; then
            echo \"*********Prefill**************\"; echo $(date);
            /usr/bin/fio --output=/mnt/prefill_output.log --client=/media/server_ip.txt /tmp/prefill.fio;
            sleep 10;
            if [[ ${server} -eq 1 ]]; then
              grep -A6 \"^fio_test\" /mnt/prefill_output.log;
            else
              grep -A6 \"^All clients\" /mnt/prefill_output.log;
            fi;
	    sleep 60;
          fi;
        "
  volumes:
    - name: data-vol
      persistentVolumeClaim:
        claimName: fio-data-pvc
    - name: cm-server-ip-vol
      configMap:
        name: fio-server-ip
    - name: cm-prefill-info-vol
      configMap:
        name: fio-prefill-info
    - name: cm-prefill-job-vol
      configMap:
        name: fio-prefill-job
  restartPolicy: Never
