fio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fio-pod-service
  namespace: simple-fio
spec:
  ports:
  - port: 8765
    protocol: TCP
    targetPort: 8765
  selector:
    app: fio-client
  type: ClusterIP
