fio-visualizer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fio-visualizer-service
  namespace: simple-fio
  labels:
    app: fio-visualizer-svc
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: fio-visualizer
  type: ClusterIP
