fio-visualizer-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fio-visualizer-route
  namespace: simple-fio
  labels:
    app: fio-visualizer-route
spec:
  #host: fio-visualizer.simple-fio.svc.cluster.local
  #host: fio-visualizer-simple-fio.apps.mtc.rdu3.perfscale.redhat.com
  port:
    targetPort: 5000
  to:
    kind: Service
    name: fio-visualizer-service
    weight: 100
  wildcardPolicy: None
